update read method